boltffi_backend/tests/kotlin/snapshots/kotlin__callback__kotlin_target_renders_single_method_callbacks_as_fun_interfaces.snap
---
source: boltffi_backend/tests/kotlin/callback.rs
expression: rendered
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

import kotlinx.coroutines.launch
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_async_callback_complete_Bytes(callback: Long, context: Long, result: ByteArray): Unit
    @JvmStatic external fun boltffi_async_callback_complete_Bytes_failure(callback: Long, context: Long, exception: Throwable): Unit
    @JvmStatic external fun boltffi_async_callback_complete_Bytes_error(callback: Long, context: Long, result: ByteArray): Unit

    @JvmStatic fun boltffiFutureContinuationCallback(handle: Long, pollResult: Byte) {
        BoltFfiAsync.resume(handle, pollResult)
    }
}

fun interface Listener {
    suspend fun load(key: UInt): String
}

private object ListenerMap {
    private val map = java.util.concurrent.ConcurrentHashMap<Long, Listener>()
    private val counter = java.util.concurrent.atomic.AtomicLong(1L)

    fun insert(value: Listener): Long {
        val handle = counter.getAndAdd(2L)
        map[handle] = value
        return handle
    }

    fun get(handle: Long): Listener? = map[handle]

    fun remove(handle: Long): Listener? = map.remove(handle)

    fun clone(handle: Long): Long {
        val value = map[handle] ?: return 0L
        return insert(value)
    }
}

object ListenerCallbacks {
    @JvmStatic
    fun free(handle: Long) {
        ListenerMap.remove(handle)
    }

    @JvmStatic
    fun clone(handle: Long): Long {
        return ListenerMap.clone(handle)
    }

    @JvmStatic
    fun load(handle: Long, key: Int, callbackToken: Long, callbackContext: Long) {
        val impl = ListenerMap.get(handle) ?: error("ListenerMap: invalid handle $handle")
        boltffiLaunchCallback {
            try {
                val __boltffi_result = impl.load(key.toUInt())
                val __boltffi_load_wire = WireWriterPool.acquire(4 + Utf8Codec.maxBytes(__boltffi_result))
                val __boltffi_load_writer = __boltffi_load_wire.writer
                __boltffi_load_writer.writeString(__boltffi_result)
                Native.boltffi_async_callback_complete_Bytes(callbackToken, callbackContext, __boltffi_load_wire.bytes())
                __boltffi_load_wire.close()
            } catch (throwable: Throwable) {
                Native.boltffi_async_callback_complete_Bytes_failure(callbackToken, callbackContext, throwable)
            }
        }
    }
}

object ListenerBridge {
    fun create(value: Listener): Long {
        return ListenerMap.insert(value)
    }
}
